# victron_ve_direct

./: CMakeLists.txt  Dockerfile.native-arm64  README.md  config.ini  mdns.hpp  vedirect_hex.hpp  victron_ve_direct.cpp
.github/workflows/: build.yml
debian/: 50-victron-ve-direct.rules  changelog  conffiles  control  copyright  postinst  postrm  preinst  prerm  rules  victron-ve-direct.service
test/: fake_mppt.py  run_test.sh
